# logisty

./: .gitignore  docker-compose.yml  docker-init.sh
backend/: Cargo.toml  build.gradle.kts  package.json
backend/core/: composer.json
backend/core/src/Adapter/: DtoBehavior.php
backend/core/src/Domain/Error/: BusinessError.php
backend/core/src/Domain/Value/: ValueObject.php
backend/core/src/Domain/Value/Fleet/: FleetId.php  FleetName.php
backend/core/src/Domain/Value/User/: UserEmail.php  UserId.php  UserInvitationId.php
backend/core/src/Persistence/: CuidBehavior.php  EntityBehavior.php
backend/fleet/: .env.test  .gitignore  composer.json
backend/fleet/config/: routes.yaml  services.yaml
backend/fleet/migrations/: Version20241123212809.php
backend/fleet/src/Adapter/Incoming/Controller/: FleetController.php
backend/fleet/src/Adapter/Outcoming/Http/: HttpUserProvider.php
backend/fleet/src/Adapter/Outcoming/Http/Dto/: UserDto.php  UserInvitationDto.php
backend/fleet/src/Adapter/Outcoming/Repository/: PostgresFleetRepository.php
backend/fleet/src/Application/Persistence/: FleetEntity.php
backend/fleet/src/Domain/: FleetHub.php
backend/fleet/src/Domain/Model/: Fleet.php  User.php  UserInvitation.php
backend/fleet/src/Domain/Model/Error/: FleetMemberInvitationError.php
backend/fleet/src/Domain/Port/: FleetRepository.php  UserProvider.php
backend/fleet/src/Domain/Service/: FleetMemberInviter.php
backend/fleet/tests/Adapter/Http/: FakeUserProvider.php
backend/fleet/tests/Adapter/Repository/: InMemoryFleetRepository.php
backend/fleet/tests/Domain/: InviteMemberHubTest.php
backend/fleets/: .env.example  Cargo.toml
backend/fleets/migrations/: 20240807200959_create_schema.sql
backend/fleets/src/: domain.rs  lib.rs
backend/fleets/src/adapter/: dto.rs  inbound.rs  outbound.rs
backend/fleets/src/adapter/inbound/: fleet_handler.rs  member_handler.rs
backend/fleets/src/adapter/outbound/: fleet_repository_impl.rs  member_repository_impl.rs  user_http_client_impl.rs
backend/fleets/src/domain/: error.rs  event.rs  model.rs  port.rs  service.rs
backend/fleets/src/domain/event/: user_invited_event.rs
backend/fleets/src/domain/port/: fleet_repository.rs  fleet_service.rs  member_invitation_dispatcher.rs  member_repository.rs  member_service.rs
backend/fleets/src/domain/service/: fleet_service_impl.rs  member_invitation_dispatcher_impl.rs
backend/fleets/src/test/: adapter.rs  fake.rs
backend/fleets/src/test/adapter/: inbound.rs
backend/fleets/src/test/adapter/inbound/: fleet_handler_test.rs  member_handler_test.rs
backend/fleets/src/test/domain/: service.rs
backend/fleets/src/test/domain/service/: fleet_service_impl_test.rs  member_invitation_dispatcher_impl_test.rs
backend/fleets/src/test/fake/: in_memory_fleet_repository.rs  in_memory_member_repository.rs
backend/service-template/: package.json
backend/service-template/src/: app.ts
backend/service-template/test/: helper.ts
backend/shared/: Cargo.toml
backend/shared/src/: domain.rs  health.rs  infra.rs  lib.rs
backend/shared/src/domain/: event.rs  port.rs  types.rs
backend/shared/src/domain/event/: users.rs
backend/shared/src/domain/port/: user_http_client.rs
backend/shared/src/domain/types/: id.rs
backend/shared/src/infra/: database.rs  http.rs  queue.rs  time.rs
backend/shared/src/infra/http/: error.rs  http_client.rs
backend/shared/src/infra/queue/: error.rs  sns_client.rs  sns_client_impl.rs
backend/shared/src/infra/sns/: error.rs  sns_client.rs  sns_client_impl.rs
backend/shared/src/test/: fake.rs
backend/shared/src/test/fake/: in_memory_sns_client.rs  in_memory_user_http_client.rs
backend/src/main/kotlin/com/logisty/core/: CoreApplication.kt
backend/src/main/kotlin/com/logisty/core/adapter/: ExceptionMapper.kt
backend/src/main/kotlin/com/logisty/core/application/: ClockConfiguration.kt  JsonConfiguration.kt  JsonMapper.kt  TranslationConfiguration.kt
backend/src/main/kotlin/com/logisty/core/domain/: BusinessExceptions.kt
backend/src/main/resources/: application.yml  messages.properties  messages_pl.properties
backend/src/test/kotlin/com/logisty/core/adapter/: FunctionalHttpTemplate.kt  (+1 more)
backend/src/test/resources/: application.yml
backend/users/: .env.example  Cargo.toml  jest.config.js  jest.config.ts  package.json  tsconfig.json
backend/users/migrations/: 20240713210138_init.sql  20240807200829_init.sql  20240807200959_create_schema.sql
backend/users/src/: adapter.rs  app.ts  domain.rs  lib.rs
backend/users/src/adapter/: dto.rs  es.rs  handler.rs  inbound.rs  outbound.rs  user.route.ts
backend/users/src/adapter/es/: user_command_handler_impl.rs  user_projection_handler_impl.rs
backend/users/src/adapter/inbound/: invitation_handler.rs  user_handler.rs  user_invited_event_handler.rs
backend/users/src/adapter/outbound/: invitation_repository_impl.rs  user_repository_impl.rs
backend/users/src/application/: env.ts  repository.rs  users.application.ts
backend/users/src/domain/: error.rs  mod.rs  model.rs  port.rs  service.rs
backend/users/src/domain/port/: invitation_repository.rs  invitation_service.rs  user.service.ts  user_command_handler.rs  user_projection_handler.rs  user_repository.rs  user_service.rs
backend/users/src/domain/service/: invitation_service_impl.rs  user_service_impl.rs
backend/users/src/test/: adapter.rs  fake.rs
backend/users/src/test/adapter/: es.rs  inbound.rs
backend/users/src/test/adapter/es/: user_projection_handler_impl_test.rs
backend/users/src/test/adapter/inbound/: user_handler_test.rs  user_invited_event_handler_test.rs
backend/users/src/test/domain/: service.rs
backend/users/src/test/domain/service/: invitation_service_impl_test.rs  user_service_impl_test.rs
backend/users/src/test/domain/service/es/: mod.rs  user_command_handler_impl_test.rs
backend/users/src/test/fake/: in_memory_invitation_repository.rs  in_memory_user_repository.rs
backend/users/test/: user.route.spec.ts
backend/users/tests/application/: repository.rs
backend/users/tests/domain/: port.rs
(+314 files in other folders)
