[workspace]
members = ["shared", "fleets", "users"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.81"
dotenvy = "0.15.7"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
thiserror = "1"
cuid = "1"
chrono = "0.4.38"
serde_json = "1"
auto_impl = "1.2.0"
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum = {version = "0.7.5", features = ["macros"]}
tower = {version = "0.4.13", features = ["full"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }
