[workspace]
members = ["shared", "users", "fleets"]
resolver = "2"

[workspace.dependencies]
# utils
async-trait = "0.1.81"
dotenvy = "0.15.7"
cuid = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = "0.4.38"
auto_impl = "1.2.0"

# reqwest
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
reqwest-tracing = "0.5.3"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

# AWS
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
aws-sdk-sns = "1.38.0"
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }

# json
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# server
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum = { version = "0.7.5", features = ["macros"] }
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1", features = ["macros"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }

# tests
axum-test = "15.3.0"
